--- a/src/Styles/common.scss
+++ b/src/Styles/common.scss
@@ -1,4 +1,9 @@
 body {
     margin: 0;
-    padding: 0
+    padding: 0;
+    height: 100vh;
+    font-family:"微软雅黑";
+    #root {
+        height: 100%;
+    }
 }
