--- a/src/Pages/LoginPage/style.scss
+++ b/src/Pages/LoginPage/style.scss
@@ -10,32 +10,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    .big-title {
-        margin-bottom: 87px;
-        letter-spacing: 18px;
-        color: black;
-        text-align: center;
-        text-indent: 18px;
-    }
     .login-form-wrapper {
         width: 400px;
         min-height: 300px;
         background-color: #fff;
         box-shadow: 0px 13px 48px rgba(0, 0, 0, 0.4);
         position: relative;
-        padding-bottom: 50px;
-        .switch-login-type {
-            width: 120px;
-            height: 120px;
-            position: absolute;
-            background-color: purple;
-            top: -60px;
-            left: 50%;
-            margin-left: -60px;
-            border-radius: 50%;
-            box-shadow: 0px 6px 27px rgba(0, 0, 0, 0.4);
-            color: white;
-        }
+        padding-bottom: 60px;
+        border-radius: 5px;
         .form {
             width: 100%;
             min-height: 50px;
@@ -43,16 +25,16 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            margin-top: 80px;
-            .login-button {
-                border-radius: 0 !important;
-                background-color: purple;
-                width: 300px;
+            margin-top: 60px;
+            padding: 0 50px;
+            .passwordword-login-form {
+                width: 100%;
+            }
+            .login-btn {
+                width: 100%;
+                height: 45px;
+                line-height: 45px;
                 margin-top: 20px;
-                color: #fff;
-                &[disabled] {
-                    background-color: #ccc;
-                }
             }
         }
     }
