--- a/src/Pages/LoginPage/style.scss
+++ b/src/Pages/LoginPage/style.scss
@@ -1,7 +1,9 @@
 .login-page-root {
+    user-select: none;
     height: 100%;
-    background-color: #ff9d00;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23000' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%23ff9d00' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23fb8d17' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23f47d24' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%23ed6e2d' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23e35f34' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23d85239' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%23cc453e' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23be3941' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23b02f43' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%23a02644' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23901e44' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%23801843' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%236f1341' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%235e0f3d' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%234e0c38' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%233e0933' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%232e062c' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%23210024' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
+    background-color: #212121;
+    background-color: #1a1a1a;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg stroke='%23212121' stroke-width='66.7' stroke-opacity='0.05' %3E%3Ccircle fill='%231a1a1a' cx='0' cy='0' r='1800'/%3E%3Ccircle fill='%23201b20' cx='0' cy='0' r='1700'/%3E%3Ccircle fill='%23251c25' cx='0' cy='0' r='1600'/%3E%3Ccircle fill='%232b1c2b' cx='0' cy='0' r='1500'/%3E%3Ccircle fill='%23301d31' cx='0' cy='0' r='1400'/%3E%3Ccircle fill='%23361d37' cx='0' cy='0' r='1300'/%3E%3Ccircle fill='%233b1d3d' cx='0' cy='0' r='1200'/%3E%3Ccircle fill='%23411d43' cx='0' cy='0' r='1100'/%3E%3Ccircle fill='%23461c49' cx='0' cy='0' r='1000'/%3E%3Ccircle fill='%234c1c50' cx='0' cy='0' r='900'/%3E%3Ccircle fill='%23511b56' cx='0' cy='0' r='800'/%3E%3Ccircle fill='%2357195d' cx='0' cy='0' r='700'/%3E%3Ccircle fill='%235d1763' cx='0' cy='0' r='600'/%3E%3Ccircle fill='%2363156a' cx='0' cy='0' r='500'/%3E%3Ccircle fill='%23681271' cx='0' cy='0' r='400'/%3E%3Ccircle fill='%236e0e77' cx='0' cy='0' r='300'/%3E%3Ccircle fill='%2374077e' cx='0' cy='0' r='200'/%3E%3Ccircle fill='%237a0085' cx='0' cy='0' r='100'/%3E%3C/g%3E%3C/svg%3E");
     background-attachment: fixed;
     background-size: cover;
     padding-top: 30px;
@@ -35,6 +37,21 @@
                 height: 45px;
                 line-height: 45px;
                 margin-top: 20px;
+            }
+            .operator-line {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                height: 35px;
+                .reg-btn {
+                    color: #9e9e9e;
+                    font-size: 12px;
+                    cursor: pointer;
+                    &:hover {
+                        color: #f44279;
+                        text-decoration: underline;
+                    }
+                }
             }
         }
     }
